--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,13 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- Ma description -->
+		<h1>Ma description</h1>
+		<p>Bonjour je suis Mapi, motivé</p>
+		<!-- Ma recompense -->
+		<h1>Récompense</h1>
+		<p>En cours ...</p>
+
 		
 	
 </body></html>
